--- a/privacy.html
+++ b/privacy.html
@@ -32,43 +32,131 @@
         <h1>Privacy Policy</h1>
         <p class="muted">Last updated: <span id="d"></span></p>
 
-        <h2>Summary</h2>
+        <h2>Overview</h2>
         <p>
-          Math Mania is designed to work without creating an account.
-          The app stores your progress (like your current level and settings) locally on your device.
+          <strong>Math Mania</strong> (“the App”) is an offline-first puzzle game. You can play without creating an account.
+          Your progress (such as your current level, world seed, and basic stats) is stored locally on your device.
         </p>
 
-        <h2>Ads</h2>
-        <p>
-          If you enable ads in your build, the app may display ads provided by third-party ad networks
-          (for example, Google AdMob). These networks may collect device identifiers and usage data to
-          serve ads and measure performance.
-        </p>
-        <p class="muted">
-          Update this section to match the ad/analytics SDKs you actually use.
-        </p>
-
-        <h2>What we collect</h2>
+        <h2>Information we collect</h2>
         <ul>
-          <li><strong>On-device game data</strong>: level progress, settings (including World Seed), and basic stats. Stored locally.</li>
-          <li><strong>Support messages</strong> (if you contact us): the email address you provide and the contents of your message.</li>
-          <li><strong>Ad/diagnostics data</strong> (if enabled): identifiers and events required by ad SDKs and crash reporting.</li>
+          <li>
+            <strong>On-device game data (stored locally)</strong>:
+            level progress, world seed/settings, and gameplay stats (for example: solved/skipped counts and solve times).
+          </li>
+          <li>
+            <strong>Support messages (if you contact us)</strong>:
+            information you choose to provide through the Support page form (for example: your message and an email address if you enter one).
+          </li>
+          <li>
+            <strong>Advertising data (via Google AdMob)</strong>:
+            if ads are enabled, the App uses the <strong>Google Mobile Ads SDK (AdMob)</strong>. Google (and its partners)
+            may collect information to show ads, limit fraud, and measure ad performance.
+          </li>
         </ul>
+
+        <h2>Ads (Google AdMob)</h2>
+        <p>
+          The App may show ads provided by Google AdMob. When ads are shown, Google may automatically collect certain information,
+          which can include:
+        </p>
+        <ul>
+          <li>
+            <strong>Device identifiers</strong> (such as the Advertising ID on Android, and similar identifiers on iOS).
+          </li>
+          <li>
+            <strong>Device / app information</strong> (e.g., device type, OS version, app version, language, and region).
+          </li>
+          <li>
+            <strong>IP address</strong> (often used to estimate general location such as city/region).
+          </li>
+          <li>
+            <strong>Ad interaction data</strong> (e.g., impressions, clicks, time of interaction, and basic diagnostics).
+          </li>
+        </ul>
+
+        <p>
+          Google may use this information to provide <strong>personalized</strong> or <strong>non-personalized</strong> ads,
+          depending on your device settings, region, consent choices (where applicable), and the App’s ad configuration.
+        </p>
+
+        <p class="muted">
+          Learn more:
+          <a href="https://policies.google.com/privacy" target="_blank" rel="noreferrer">Google Privacy Policy</a> ·
+          <a href="https://support.google.com/admob/answer/6128543" target="_blank" rel="noreferrer">AdMob & data</a> ·
+          <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noreferrer">Google partner sites</a>
+        </p>
 
         <h2>How we use information</h2>
         <ul>
-          <li>To operate the app and keep your progress.</li>
-          <li>To respond to support requests.</li>
-          <li>To show ads (if enabled) and improve stability.</li>
+          <li><strong>To run the App</strong> and keep your progress/settings on your device.</li>
+          <li><strong>To respond to support requests</strong> you send through the Support page.</li>
+          <li><strong>To show ads</strong> (if enabled) and measure performance and reliability through the ad provider.</li>
         </ul>
+
+        <h2>Sharing</h2>
+        <p>
+          We do not sell your personal information.
+          We share information only as described below:
+        </p>
+        <ul>
+          <li>
+            <strong>AdMob (Google)</strong>: if ads are enabled, data may be collected and processed by Google as described above.
+          </li>
+          <li>
+            <strong>Support provider</strong>: if you use the Support contact form, your message is processed by the form service
+            (and delivered to us by email). The form service and email provider will process your submission to deliver it.
+          </li>
+        </ul>
+
+        <h2>Data storage and retention</h2>
+        <ul>
+          <li>
+            <strong>Game data</strong> is stored locally on your device and remains until you uninstall the App
+            or clear the App’s storage/data.
+          </li>
+          <li>
+            <strong>Support messages</strong> are retained as long as needed to respond and maintain support history,
+            and may be deleted periodically.
+          </li>
+          <li>
+            <strong>Ad-related data</strong> is handled by Google under their retention practices (see links above).
+          </li>
+        </ul>
+
+        <h2>Your choices</h2>
+        <ul>
+          <li>
+            <strong>Reset advertising ID</strong>: on many devices you can reset or limit the Advertising ID in system settings.
+          </li>
+          <li>
+            <strong>Ad personalization</strong>: depending on your region, you may be shown consent options for personalized ads,
+            or you can adjust ad personalization in your Google/Apple settings.
+          </li>
+          <li>
+            <strong>Support form</strong>: you can choose what information to include when contacting support.
+          </li>
+        </ul>
+
+        <h2>Children’s privacy</h2>
+        <p>
+          The App is not intended for children under 13 (or the minimum age required in your country).
+          If you believe a child has provided personal information through the Support form, please contact us and we’ll delete it.
+        </p>
+
+        <h2>Changes to this policy</h2>
+        <p>
+          We may update this policy from time to time. The “Last updated” date at the top reflects the latest version.
+        </p>
 
         <h2>Contact</h2>
         <p>
-          For privacy questions, use the contact form on the <a href="./index.html">Support</a> page.
+          For privacy questions or requests, please use the contact form on the
+          <a href="./index.html"> Support</a> page.
         </p>
 
         <p class="muted">
-          This template is provided for convenience and is not legal advice.
+          This policy is provided for informational purposes and is not legal advice.
         </p>
       </div>
     </div>
